tests/fixtures/effect-compiler/errors/EFX1003.effect
CCEffect %{
  techniques:
  - passes:
    - rasterizerState: 2
}%
